<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">

            <LinearLayout
                android:id="@+id/birthday_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/remainder_holder_blue"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/birthday_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday_title"
                    android:textColor="#4285F4"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/birthday_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday_content"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/first_meet_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/remainder_holder_green"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/first_meet_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_meet_title"
                    android:textColor="#0F9D58"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/first_meet_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_meet_content"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/meet_place_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/remainder_holder_yellow"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/meet_place_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_meet_title"
                    android:textColor="#F4B400"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/meet_place_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_meet_content"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/upcoming_event_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/remainder_holder_red"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/upcoming_event_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming_event_title"
                    android:textColor="#DB4437"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/upcoming_event_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming_event_content"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

</RelativeLayout>